--- a/Engine/Engine.vcxproj.filters
+++ b/Engine/Engine.vcxproj.filters
@@ -106,6 +106,12 @@
     <Filter Include="Framework">
       <UniqueIdentifier>{ac264289-b142-4670-8528-be08910cd5a6}</UniqueIdentifier>
     </Filter>
+    <Filter Include="Framework\SceneManager">
+      <UniqueIdentifier>{58dab0a0-59c5-4cf9-95ba-19f2b051c76b}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="Interface">
+      <UniqueIdentifier>{698a144f-8678-45a3-8e71-2fb257d08434}</UniqueIdentifier>
+    </Filter>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="DebugTools\DebugManager\DebugManager.cpp">
@@ -197,6 +203,9 @@
     </ClCompile>
     <ClCompile Include="Framework\NimaFramework.cpp">
       <Filter>Framework</Filter>
+    </ClCompile>
+    <ClCompile Include="Features\SceneManager\SceneManager.cpp">
+      <Filter>ソース ファイル</Filter>
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
@@ -301,6 +310,12 @@
     </ClInclude>
     <ClInclude Include="Framework\NimaFramework.h">
       <Filter>Framework</Filter>
+    </ClInclude>
+    <ClInclude Include="Features\SceneManager\SceneManager.h">
+      <Filter>Framework\SceneManager</Filter>
+    </ClInclude>
+    <ClInclude Include="Interfaces\IScene.h">
+      <Filter>Interface</Filter>
     </ClInclude>
   </ItemGroup>
   <ItemGroup>
