--- a/Engine/Engine.vcxproj
+++ b/Engine/Engine.vcxproj
@@ -142,6 +142,7 @@
     <ClCompile Include="Features\Model\ModelManager.cpp" />
     <ClCompile Include="Features\Object3d\Object3d.cpp" />
     <ClCompile Include="Features\Object3d\Object3dSystem.cpp" />
+    <ClCompile Include="Features\Particle\Emitter\ParticleEmitter.cpp" />
     <ClCompile Include="Features\Particle\Particle.cpp" />
     <ClCompile Include="Features\Particle\ParticleManager.cpp" />
     <ClCompile Include="Features\Particle\ParticleSystem.cpp" />
@@ -179,6 +180,8 @@
     <ClInclude Include="Features\Model\ModelManager.h" />
     <ClInclude Include="Features\Object3d\Object3d.h" />
     <ClInclude Include="Features\Object3d\Object3dSystem.h" />
+    <ClInclude Include="Features\Particle\Emitter\BaseParticleEmitter.h" />
+    <ClInclude Include="Features\Particle\Emitter\ParticleEmitter.h" />
     <ClInclude Include="Features\Particle\Particle.h" />
     <ClInclude Include="Features\Particle\ParticleManager.h" />
     <ClInclude Include="Features\Particle\ParticleSystem.h" />
@@ -187,6 +190,7 @@
     <ClInclude Include="Features\Sprite\SpriteSystem.h" />
     <ClInclude Include="Framework\NimaFramework.h" />
     <ClInclude Include="Interfaces\IScene.h" />
+    <ClInclude Include="Interfaces\ISceneFactory.h" />
     <ClInclude Include="Utility\ConvertString\ConvertString.h" />
   </ItemGroup>
   <ItemGroup>
