--- a/SampleProject/SampleProject.vcxproj.filters
+++ b/SampleProject/SampleProject.vcxproj.filters
@@ -19,6 +19,9 @@
     <Filter Include="Game\Scene">
       <UniqueIdentifier>{a47a2190-d9bf-4cb4-90cb-fd63ca9857f3}</UniqueIdentifier>
     </Filter>
+    <Filter Include="Game\Scene\Factory">
+      <UniqueIdentifier>{15b0a614-ebcb-4f55-b50f-18fbabed195d}</UniqueIdentifier>
+    </Filter>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="main.cpp">
@@ -30,6 +33,9 @@
     <ClCompile Include="Scene\GameScene.cpp">
       <Filter>Game\Scene</Filter>
     </ClCompile>
+    <ClCompile Include="Scene\Factory\SceneFactory.cpp">
+      <Filter>Game\Scene\Factory</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="SampleProgram\SampleProgram.h">
@@ -37,6 +43,9 @@
     </ClInclude>
     <ClInclude Include="Scene\GameScene.h">
       <Filter>Game\Scene</Filter>
+    </ClInclude>
+    <ClInclude Include="Scene\Factory\SceneFactory.h">
+      <Filter>Game\Scene\Factory</Filter>
     </ClInclude>
   </ItemGroup>
 </Project>
