--- a/SampleProject/imgui.ini
+++ b/SampleProject/imgui.ini
@@ -4,7 +4,7 @@ Size=400,400
 Collapsed=0
 
 [Window][Log]
-Pos=19,592
+Pos=33,480
 Size=783,212
 Collapsed=0
 
@@ -14,7 +14,55 @@ Size=171,203
 Collapsed=0
 
 [Window][デバッグ]
-Pos=912,184
-Size=430,441
+Pos=873,47
+Size=409,441
 Collapsed=0
+
+[Table][0x3DFC7327,2]
+Column 0  Weight=1.0000
+Column 1  Weight=1.0000
+
+[Table][0x0D16A954,2]
+Column 0  Weight=1.0000
+Column 1  Weight=1.0000
+
+[Table][0x35738C98,2]
+Column 0  Weight=1.0000
+Column 1  Weight=1.0000
+
+[Table][0xC37703DA,2]
+Column 0  Weight=1.0000
+Column 1  Weight=1.0000
+
+[Table][0xFC5F4AD7,2]
+Column 0  Weight=1.0000
+Column 1  Weight=1.0000
+
+[Table][0x89548168,2]
+Column 0  Weight=1.0000
+Column 1  Weight=1.0000
+
+[Table][0x99AA861A,2]
+Column 0  Weight=1.0000
+Column 1  Weight=1.0000
+
+[Table][0x11DC20E0,2]
+Column 0  Weight=1.0000
+Column 1  Weight=1.0000
+
+[Table][0x0D7C7C4C,2]
+Column 0  Weight=1.0000
+Column 1  Weight=1.0000
+
+[Table][0xF6C665FE,2]
+Column 0  Weight=1.0000
+Column 1  Weight=1.0000
+
+[Table][0x7317837E,2]
+Column 0  Weight=1.0000
+Column 1  Weight=1.0000
+
+[Table][0x8B0757B7,2]
+Column 0  Weight=1.0000
+Column 1  Weight=1.0000
 
