--- a/SampleProject/imgui.ini
+++ b/SampleProject/imgui.ini
@@ -66,3 +66,7 @@ Column 1  Weight=1.0000
 Column 0  Weight=1.0000
 Column 1  Weight=1.0000
 
+[Table][0xD91CAF56,2]
+Column 0  Weight=1.0000
+Column 1  Weight=1.0000
+
