平面用にタイリングできるようシェーダを書き換え

--- a/SampleProject/imgui.ini
+++ b/SampleProject/imgui.ini
@@ -4,19 +4,19 @@ Size=400,400
 Collapsed=0
 
 [Window][Log]
-Pos=33,480
-Size=783,212
+Pos=-2,590
+Size=1289,131
 Collapsed=0
 
 [Window][Objects]
-Pos=19,147
-Size=171,203
-Collapsed=0
+Pos=-2,132
+Size=177,459
+Collapsed=1
 
 [Window][デバッグ]
-Pos=873,47
-Size=409,441
-Collapsed=0
+Pos=904,5
+Size=371,441
+Collapsed=1
 
 [Table][0x3DFC7327,2]
 Column 0  Weight=1.0000
@@ -67,6 +67,38 @@ Column 0  Weight=1.0000
 Column 1  Weight=1.0000
 
 [Table][0xD91CAF56,2]
+Column 0  Weight=1.0000
+Column 1  Weight=1.0000
+
+[Table][0x726B8819,2]
+Column 0  Weight=1.0000
+Column 1  Weight=1.0000
+
+[Table][0xE7D6DDE4,2]
+Column 0  Weight=1.0000
+Column 1  Weight=1.0000
+
+[Table][0x79DC9B74,2]
+Column 0  Weight=1.0000
+Column 1  Weight=1.0000
+
+[Table][0x579ACC42,2]
+Column 0  Weight=1.0000
+Column 1  Weight=1.0000
+
+[Table][0xAC664044,2]
+Column 0  Weight=1.0000
+Column 1  Weight=1.0000
+
+[Table][0x5C871F9F,2]
+Column 0  Weight=1.0000
+Column 1  Weight=1.0000
+
+[Table][0x14659823,2]
+Column 0  Weight=1.0000
+Column 1  Weight=1.0000
+
+[Table][0x8AE1AEEE,2]
 Column 0  Weight=1.0000
 Column 1  Weight=1.0000
 
