--- a/SampleProject/imgui.ini
+++ b/SampleProject/imgui.ini
@@ -11,12 +11,12 @@ Collapsed=0
 [Window][Objects]
 Pos=-2,132
 Size=177,459
-Collapsed=1
+Collapsed=0
 
 [Window][デバッグ]
-Pos=904,5
-Size=371,441
-Collapsed=1
+Pos=894,52
+Size=371,430
+Collapsed=0
 
 [Table][0x3DFC7327,2]
 Column 0  Weight=1.0000
@@ -99,6 +99,18 @@ Column 0  Weight=1.0000
 Column 1  Weight=1.0000
 
 [Table][0x8AE1AEEE,2]
+Column 0  Weight=1.0000
+Column 1  Weight=1.0000
+
+[Table][0x054173FF,2]
+Column 0  Weight=1.0000
+Column 1  Weight=1.0000
+
+[Table][0x3E037294,2]
+Column 0  Weight=1.0000
+Column 1  Weight=1.0000
+
+[Table][0x46B972C2,2]
 Column 0  Weight=1.0000
 Column 1  Weight=1.0000
 
