ラインマネージャー追加とパーティクル生成の改善
`Engine.vcxproj` に `LineManager.h` を追加し、`Engine.vcxproj.filters` に新しいフィルターを追加しました。`BaseParticleEmitter.cpp` の `DebugWindow` 関数にデバッグ表示と入力フィールドを追加し、`ParticleEmitter.cpp` の `Initialize` 関数と `EmitParticle` 関数を改善しました。`RandomGenerator.h` の `Generate` 関数で範囲チェックを修正し、`imgui.ini` のウィンドウ設定を更新しました。

--- a/Engine/Engine.vcxproj
+++ b/Engine/Engine.vcxproj
@@ -181,6 +181,7 @@
     <ClInclude Include="Features\Input\Input.h" />
     <ClInclude Include="Features\Line\Line.h" />
     <ClInclude Include="Features\Line\LineSystem.h" />
+    <ClInclude Include="Features\Line\Manager\LineManager.h" />
     <ClInclude Include="Features\Model\Helper\ModelHelper.h" />
     <ClInclude Include="Features\Model\Model.h" />
     <ClInclude Include="Features\Model\ModelManager.h" />
