--- a/SampleProject/imgui.ini
+++ b/SampleProject/imgui.ini
@@ -14,8 +14,8 @@ Size=177,459
 Collapsed=0
 
 [Window][デバッグ]
-Pos=894,52
-Size=371,430
+Pos=876,40
+Size=391,430
 Collapsed=0
 
 [Table][0x3DFC7327,2]
@@ -111,6 +111,26 @@ Column 0  Weight=1.0000
 Column 1  Weight=1.0000
 
 [Table][0x46B972C2,2]
+Column 0  Weight=1.0000
+Column 1  Weight=1.0000
+
+[Table][0x8E1DEA6B,2]
+Column 0  Weight=0.8034
+Column 1  Weight=1.1966
+
+[Table][0x1C3C8CEB,2]
+Column 0  Weight=1.0000
+Column 1  Weight=1.0000
+
+[Table][0x668607A0,2]
+Column 0  Weight=1.0000
+Column 1  Weight=1.0000
+
+[Table][0xE34D6D4F,2]
+Column 0  Weight=1.0000
+Column 1  Weight=1.0000
+
+[Table][0x3DFD6E11,2]
 Column 0  Weight=1.0000
 Column 1  Weight=1.0000
 
