--- a/SampleProject/imgui.ini
+++ b/SampleProject/imgui.ini
@@ -14,7 +14,7 @@ Size=177,459
 Collapsed=0
 
 [Window][デバッグ]
-Pos=876,40
+Pos=876,36
 Size=391,430
 Collapsed=0
 
@@ -131,6 +131,18 @@ Column 0  Weight=1.0000
 Column 1  Weight=1.0000
 
 [Table][0x3DFD6E11,2]
+Column 0  Weight=1.0000
+Column 1  Weight=1.0000
+
+[Table][0x0810115C,2]
+Column 0  Weight=1.0000
+Column 1  Weight=1.0000
+
+[Table][0x5E89EF57,2]
+Column 0  Weight=1.0000
+Column 1  Weight=1.0000
+
+[Table][0x7E5A772A,2]
 Column 0  Weight=1.0000
 Column 1  Weight=1.0000
 
