--- a/SampleProject/imgui.ini
+++ b/SampleProject/imgui.ini
@@ -9,13 +9,18 @@ Size=1289,131
 Collapsed=0
 
 [Window][Objects]
-Pos=-2,132
+Pos=-2,131
 Size=177,459
 Collapsed=0
 
 [Window][デバッグ]
-Pos=876,36
+Pos=877,33
 Size=391,430
+Collapsed=0
+
+[Window][SRVManager]
+Pos=515,257
+Size=284,164
 Collapsed=0
 
 [Table][0x3DFC7327,2]
@@ -143,6 +148,50 @@ Column 0  Weight=1.0000
 Column 1  Weight=1.0000
 
 [Table][0x7E5A772A,2]
+Column 0  Weight=1.0000
+Column 1  Weight=1.0000
+
+[Table][0x20D23B68,2]
+Column 0  Weight=1.0000
+Column 1  Weight=1.0000
+
+[Table][0xC984E9F7,2]
+Column 0  Weight=1.0000
+Column 1  Weight=1.0000
+
+[Table][0x0249B810,2]
+Column 0  Weight=1.0000
+Column 1  Weight=1.0000
+
+[Table][0x3A809993,2]
+Column 0  Weight=1.0000
+Column 1  Weight=1.0000
+
+[Table][0xE75F4DE0,2]
+Column 0  Weight=1.0000
+Column 1  Weight=1.0000
+
+[Table][0x4EDFA642,2]
+Column 0  Weight=1.0000
+Column 1  Weight=1.0000
+
+[Table][0xABC2DE80,2]
+Column 0  Weight=1.0000
+Column 1  Weight=1.0000
+
+[Table][0x1E6F8216,2]
+Column 0  Weight=1.0000
+Column 1  Weight=1.0000
+
+[Table][0x49336FE0,2]
+Column 0  Weight=1.0000
+Column 1  Weight=1.0000
+
+[Table][0x9A3A1EDB,2]
+Column 0  Weight=1.0000
+Column 1  Weight=1.0000
+
+[Table][0x5C74561D,2]
 Column 0  Weight=1.0000
 Column 1  Weight=1.0000
 
