最新状態に合わせて各プロジェクトを再ターゲット - ImGui - VecMat

--- a/SampleProject/imgui.ini
+++ b/SampleProject/imgui.ini
@@ -195,3 +195,7 @@ Column 1  Weight=1.0000
 Column 0  Weight=1.0000
 Column 1  Weight=1.0000
 
+[Table][0x49B338C2,2]
+Column 0  Weight=1.0000
+Column 1  Weight=1.0000
+
