UIの改善とパーティクルシステムの更新
- `BaseParticleEmitter.cpp` の `DebugWindow` 関数で、ImGui の UI 要素を `CollapsingHeader` にグループ化し、UIの見通しを改善
- `BaseParticleEmitter.h` の `EmitterData` 構造体に `alphaDeltaValue_` を追加
- `ParticleEmitter.cpp` の `EmitParticle` 関数で、パーティクルのアルファ値の変化量を `emitterData_.alphaDeltaValue_` から設定
- `Particle.cpp` の `Update` 関数に `currentInstancingSize_` のチェックを追加し、`emplace_back` 関数を定義
- `Particle.h` で `emplace_back` 関数を宣言し、定義を `Particle.cpp` に移動
- `GameScene.cpp` と `RequiredScene.cpp` の `Finalize` 関数で、シーン切り替えのトリガーを `DIK_LCONTROL` と `DIK_1`/`DIK_2` の同時押しに変更
- `GameScene.cpp` の `EmitterSetting` 関数で、`emitterData.alphaDeltaValue_` を初期化
- `imgui.ini` のウィンドウ位置やサイズを変更し、テーブル設定を追加

--- a/SampleProject/imgui.ini
+++ b/SampleProject/imgui.ini
@@ -9,13 +9,13 @@ Size=1289,131
 Collapsed=0
 
 [Window][Objects]
-Pos=-2,131
+Pos=-2,132
 Size=177,459
 Collapsed=0
 
 [Window][デバッグ]
-Pos=877,33
-Size=391,430
+Pos=769,1
+Size=492,485
 Collapsed=0
 
 [Window][SRVManager]
@@ -196,6 +196,30 @@ Column 0  Weight=1.0000
 Column 1  Weight=1.0000
 
 [Table][0x49B338C2,2]
+Column 0  Weight=1.0000
+Column 1  Weight=1.0000
+
+[Table][0xA72D0810,2]
+Column 0  Weight=1.0000
+Column 1  Weight=1.0000
+
+[Table][0xF557748C,2]
+Column 0  Weight=1.0000
+Column 1  Weight=1.0000
+
+[Table][0x67732AE7,2]
+Column 0  Weight=1.0000
+Column 1  Weight=1.0000
+
+[Table][0x6A43D391,2]
+Column 0  Weight=1.0000
+Column 1  Weight=1.0000
+
+[Table][0xF6826552,2]
+Column 0  Weight=1.0000
+Column 1  Weight=1.0000
+
+[Table][0x20092755,2]
 Column 0  Weight=1.0000
 Column 1  Weight=1.0000
 
