--- a/SampleProject/imgui.ini
+++ b/SampleProject/imgui.ini
@@ -14,7 +14,7 @@ Size=177,459
 Collapsed=0
 
 [Window][デバッグ]
-Pos=769,1
+Pos=751,10
 Size=492,485
 Collapsed=0
 
@@ -220,6 +220,30 @@ Column 0  Weight=1.0000
 Column 1  Weight=1.0000
 
 [Table][0x20092755,2]
+Column 0  Weight=1.0000
+Column 1  Weight=1.0000
+
+[Table][0xB8AAD609,2]
+Column 0  Weight=1.0000
+Column 1  Weight=1.0000
+
+[Table][0x8DEECFF0,2]
+Column 0  Weight=1.0000
+Column 1  Weight=1.0000
+
+[Table][0x43EBF7B4,2]
+Column 0  Weight=1.0000
+Column 1  Weight=1.0000
+
+[Table][0x25D5F2CE,2]
+Column 0  Weight=1.0000
+Column 1  Weight=1.0000
+
+[Table][0xA6DB571D,2]
+Column 0  Weight=1.0000
+Column 1  Weight=1.0000
+
+[Table][0x0FD8B6F1,2]
 Column 0  Weight=1.0000
 Column 1  Weight=1.0000
 
